--- a/buoi2/index.html
+++ b/buoi2/index.html
@@ -7,45 +7,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
         <header>
             <!--Logo-->
-
             <div>
-                <h1>logo</h1>
+                <img class="pageLogo" src="logo.svg" alt="logo vn express">
             </div>
             <!-- Nav -->
-
             <nav>
-                <ul>
+                <ul class="menu list">
                     <li> <a class="navLink" href="#">Trang chủ</a ></li>
-                    <li> <a class="navLink"  href="#">Giới thiệu</a ></li>
-                    <li> <a class="navLink" href="#">Bài viết</a ></li>   
+                    <li> <a class="navLink"  href="#">Thời sự</a ></li>
+                    <li> <a class="navLink" href="#">Thế giới</a ></li>
+                    <li> <a class="navLink" href="#">Kinh Doanh</a></li>                           
                 </ul>
-
             </nav>
         </header>
 
         <main>
-            <!--Bài nhạc sâu lắng-->
-            <section>
-                <div>
-                    <h2>Phần đầu section</h2>
-                </div>
-                <div></div>
-                <div></div>
-                <div></div>
-
+            <section class="posts p1">
+                <h1 class="postTitle">Thêm 3 người nhập cảnh nhiễm nCoV</h1>
+                <img class ="postImage" src="PHAM2408JPG-1603277144-1591-1603277166.jpg">
+                <p class="postContent">Chiều 21/10, Bộ Y tế ghi nhận 3 ca dương tính nCoV, đều là người nhập cảnh được cách ly ngay tại Ninh Bình và Bắc Giang.
+                <br>
+                Bộ Y tế yêu cầu người dân thực hiện tốt "thông điệp 5K", nhất là đeo khẩu trang và rửa tay bằng xà phòng, dung dịch sát khuẩn.
+                </p>
             </section>
+            <section class="posts p2">
+                <h1 class="postTitle">Bộ trưởng Tô Lâm: 'Cần dứt khoát bỏ hộ khẩu giấy'</h1>
+                <img class ="postImage" src="5cd9daedc1d03f8e66c1-3537-1603268040.jpg">
+                <p class="postContent">Lãnh đạo Bộ Công an đề nghị Quốc hội tán thành phương án bỏ hộ khẩu giấy từ giữa năm 2021, bởi "đây là mong ước của người dân".</p>
+            </section>
+            <section class="posts p3">
+                <h1 class="postTitle">Bộ trưởng Quốc phòng: 'Huy động trực thăng cứu trợ người dân'</h1>
+                <img class ="postImage"  src="e0eba58afeb500eb59a4-8682-1603273071.jpg">
+                <p class="postContent">Chiều 21/10, Bộ Y tế ghi nhận 3 ca dương tính nCoV, đều là người nhập cảnh được cách ly ngay tại Ninh Bình và Bắc Giang.</p>
+            </section>                        
 
         </main>
 
         <footer>
             <div>
-                <h3>logo</h3>
-                <p>Bản quyền</p>
-            </div>
+                <img class="logoimage" src="logo.svg" alt="logo vn express">
+                <p class ="copyRight">Bản quyền</p>
 
+            </div>
         </footer>
 
     </div>
