--- a/buoi2/business.html
+++ b/buoi2/business.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VnExpress</title>
+    <title>Kinh doanh</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="../favicon-16x16.png" type="image/x-icon">
     <link rel="icon" href="../favicon-16x16.png" type="image/x-icon">
@@ -27,31 +27,32 @@
 
     <main>
         <section class="pageTitle">
-            <h1>Trang chủ</h1>
+           <h1>Kinh doanh</h1>
         </section>
+
         <section class="mainPost">
-            <img class ="mainImage" src="3c254bb3348bcad5939a-160333085-2562-6308-1603330859.jpg">
+            <img class ="mainImage" src="bac-giang-1603340133-2991-1603340246.jpg">
             <div class="postTitleAndContent">
-                <h2 class="mainPostTitle">Lễ tang 22 quân nhân bị vùi lấp</h2>
-                <p class="mainPostContent">22 quân nhân hy sinh trong vụ sạt núi ở Đoàn kinh tế quốc phòng 337, xã Hướng Phùng (huyện Hướng Hoá) được tổ chức tang lễ chung theo nghi thức quân đội, từ 7h sáng 22/10.
+                <h2 class="mainPostTitle">Nông thôn Việt Nam biến đổi nhờ làn sóng chuyển dịch sản xuất</h2>
+                <p class="mainPostContent">Trước khi các nhà máy xuất hiện, Bắc Giang còn là tỉnh nghèo, nổi tiếng với gạo, vải và “gà chạy bộ”.
                 </p>                
             </div>
         </section>
 
         <div class="smallPosts">
             <section class="Posts" id="firstPost">
-                <h2 class="postTitle">Biden khó lay chuyển 'di sản Trung Quốc' của Trump</h2>
-                <p class="postContent">Quan hệ Mỹ - Trung đang có nguy cơ biến thành "Chiến tranh Lạnh mới" dưới thời Trump, xu hướng Biden khó có thể đảo ngược nếu đắc cử.</p>
+                <h2 class="postTitle">Quý III Vietcombank: lãi giảm hơn 20%</h2>
+                <p class="postContent">Lợi nhuận của nhà băng đứng đầu thị trường giảm mạnh so với cùng kỳ do tăng dự phòng và sự phân hóa trong hoạt động.</p>
             </section>
 
             <section class="Posts" id="secondPost">
-                <h2 class="postTitle">Sinh con trong mưa lũ</h2>
-                <p class ="postContent">Mắc kẹt trong Bệnh viện Đa khoa Lệ Thủy 6 ngày vì lũ, những giọt sữa đầu tiên từ bầu ngực chị Võ Thị Thu Kiều đến từ mì tôm và lương khô.</p>
+                <h2 class="postTitle">Hơn 820.000 bao thuốc lá lậu bị thu giữ</h2>
+                <p class ="postContent">Trong 9 tháng, cơ quan chức năng phát hiện 1.035 vụ mua bán, vận chuyển, tàng trữ thuốc lá lậu, thu giữ 820.172 gói thuốc.</p>
             </section>         
         
             <section class="Posts" id="thirdPost">
-                <h2 class="postTitle">Nghệ sĩ Lý Huỳnh qua đời</h2>
-                <p class ="postContent">Nghệ sĩ Nhân dân Lý Huỳnh - cha tài tử Lý Hùng - qua đời tại nhà riêng 5h sáng 22/10 vì bệnh nặng, thọ 78 tuổi.</p>
+                <h2 class="postTitle">Giá vàng SJC có xu hướng tăng nhẹ</h2>
+                <p class ="postContent">Các doanh nghiệp kinh doanh vàng miếng sáng nay tăng 50.000-100.000 đồng, đẩy giá giao dịch lên 56-56,45 triệu đồng mỗi lượng.</p>
             </section> 
         </div>   
     </main>
