--- a/buoi2/world.html
+++ b/buoi2/world.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VnExpress</title>
+    <title>Thế giới</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="../favicon-16x16.png" type="image/x-icon">
     <link rel="icon" href="../favicon-16x16.png" type="image/x-icon">
@@ -27,31 +27,32 @@
 
     <main>
         <section class="pageTitle">
-            <h1>Trang chủ</h1>
+          <h1>Thế giới</h1>
         </section>
+
         <section class="mainPost">
-            <img class ="mainImage" src="3c254bb3348bcad5939a-160333085-2562-6308-1603330859.jpg">
+            <img class ="mainImage" src="nintchdbpict000615499753-16032-4235-4999-1603266005.jpg">
             <div class="postTitleAndContent">
-                <h2 class="mainPostTitle">Lễ tang 22 quân nhân bị vùi lấp</h2>
-                <p class="mainPostContent">22 quân nhân hy sinh trong vụ sạt núi ở Đoàn kinh tế quốc phòng 337, xã Hướng Phùng (huyện Hướng Hoá) được tổ chức tang lễ chung theo nghi thức quân đội, từ 7h sáng 22/10.
+                <h2 class="mainPostTitle">Trump mất cử tri ở 'Vành đai Rỉ sét'</h2>
+                <p class="mainPostContent">Việc Trump để mất cử tri như Tanya Wojciak, bà mẹ ở đông bắc Ohio vốn luôn ủng hộ đảng Cộng hòa, là điều tưởng như không thể xảy ra.
                 </p>                
             </div>
         </section>
 
         <div class="smallPosts">
             <section class="Posts" id="firstPost">
-                <h2 class="postTitle">Biden khó lay chuyển 'di sản Trung Quốc' của Trump</h2>
-                <p class="postContent">Quan hệ Mỹ - Trung đang có nguy cơ biến thành "Chiến tranh Lạnh mới" dưới thời Trump, xu hướng Biden khó có thể đảo ngược nếu đắc cử.</p>
+                <h2 class="postTitle">Người Mỹ 'bị mất hơn 2,5 triệu năm sống do Covid-19'</h2>
+                <p class="postContent">Bộ Ngoại giao Mỹ đưa 6 cơ quan truyền thông vào danh sách cơ quan chính phủ Trung Quốc, buộc nhân viên của họ đăng ký như phái viên nước ngoài.</p>
             </section>
 
             <section class="Posts" id="secondPost">
-                <h2 class="postTitle">Sinh con trong mưa lũ</h2>
-                <p class ="postContent">Mắc kẹt trong Bệnh viện Đa khoa Lệ Thủy 6 ngày vì lũ, những giọt sữa đầu tiên từ bầu ngực chị Võ Thị Thu Kiều đến từ mì tôm và lương khô.</p>
+                <h2 class="postTitle">Cố vấn an ninh quốc gia Mỹ nói Trung Quốc là 'mối đe dọa thế kỷ'</h2>
+                <p class ="postContent">Cố vấn an ninh quốc gia Robert O'Brien cho rằng Trung Quốc là mối đe dọa khi tìm cách độc chiếm mọi ngành công nghiệp quan trọng của thế kỷ 21.</p>
             </section>         
         
             <section class="Posts" id="thirdPost">
-                <h2 class="postTitle">Nghệ sĩ Lý Huỳnh qua đời</h2>
-                <p class ="postContent">Nghệ sĩ Nhân dân Lý Huỳnh - cha tài tử Lý Hùng - qua đời tại nhà riêng 5h sáng 22/10 vì bệnh nặng, thọ 78 tuổi.</p>
+                <h2 class="postTitle">Hai mảng đối lập của bức tranh Covid-19 toàn cầu</h2>
+                <p class ="postContent">Khi Mỹ và nhiều nước châu Âu chạy đua chống đỡ làn sóng Covid-19 mới, cuộc sống ở hầu hết quốc gia châu Á đã dần trở lại bình thường.</p>
             </section> 
         </div>   
     </main>
