--- a/buoi2/index.html
+++ b/buoi2/index.html
@@ -14,7 +14,7 @@
         <div>
             <a href="index.html"><img class="pageLogo" src="logo.svg" alt="logo vn express"></a>
         </div>
-        <!-- Nav -->
+        <!-- Menu -->
         <nav>
             <ul class="menuList">
                 <li> <a class="navLink" href="index.html">Trang chủ</a ></li>
@@ -26,9 +26,9 @@
     </header>
 
     <main>
-        <section class="pageTitle">
-            <h1>Trang chủ</h1>
-        </section>
+        <h1 class="pageTitle">Trang chủ</h1>
+
+        <!--Bài viết nổi bật-->
         <section class="mainPost">
             <img class ="mainImage" src="3c254bb3348bcad5939a-160333085-2562-6308-1603330859.jpg">
             <div class="postTitleAndContent">
@@ -38,18 +38,19 @@
             </div>
         </section>
 
+        <!--Các bài viết khác-->
         <div class="smallPosts">
-            <section class="Posts" id="firstPost">
+            <section class="posts" id="firstPost">
                 <h2 class="postTitle">Biden khó lay chuyển 'di sản Trung Quốc' của Trump</h2>
                 <p class="postContent">Quan hệ Mỹ - Trung đang có nguy cơ biến thành "Chiến tranh Lạnh mới" dưới thời Trump, xu hướng Biden khó có thể đảo ngược nếu đắc cử.</p>
             </section>
 
-            <section class="Posts" id="secondPost">
+            <section class="posts" id="secondPost">
                 <h2 class="postTitle">Sinh con trong mưa lũ</h2>
                 <p class ="postContent">Mắc kẹt trong Bệnh viện Đa khoa Lệ Thủy 6 ngày vì lũ, những giọt sữa đầu tiên từ bầu ngực chị Võ Thị Thu Kiều đến từ mì tôm và lương khô.</p>
             </section>         
         
-            <section class="Posts" id="thirdPost">
+            <section class="posts" id="thirdPost">
                 <h2 class="postTitle">Nghệ sĩ Lý Huỳnh qua đời</h2>
                 <p class ="postContent">Nghệ sĩ Nhân dân Lý Huỳnh - cha tài tử Lý Hùng - qua đời tại nhà riêng 5h sáng 22/10 vì bệnh nặng, thọ 78 tuổi.</p>
             </section> 
@@ -57,12 +58,9 @@
     </main>
 
     <footer>
-        <div>
-            <a href="index.html"><img class="logoimage" src="logo.svg" alt="logo vn express"></a>
+            <a href="index.html"><img class="pageLogo" src="logo.svg" alt="logo vn express"></a>
             <p class ="copyRight">© 1997-2020. Toàn bộ bản quyền thuộc VnExpress <br>
-                    Báo tiếng Việt nhiều người xem nhất. Thuộc Bộ Khoa học Công nghệ</p>
-
-        </div>
+            Báo tiếng Việt nhiều người xem nhất. Thuộc Bộ Khoa học Công nghệ</p>
     </footer>
 
 </body>
