--- a/buoi2/news.html
+++ b/buoi2/news.html
@@ -26,9 +26,7 @@
     </header>
 
     <main>
-        <section class="pageTitle">
-            <h1>Thời sự</h1>
-        </section>
+        <h1 class="pageTitle">Thời sự</h1>
 
         <section class="mainPost">
             <img class ="mainImage" src="anh1-1603336550-5583-1603338285.jpg">
@@ -40,17 +38,17 @@
         </section>
 
         <div class="smallPosts">
-            <section class="Posts" id="firstPost">
+            <section class="posts" id="firstPost">
                 <h2 class="postTitle">Đêm không ngủ của sinh viên có quê ở vùng lũ</h2>
                 <p class="postContent">Mất liên lạc với ba mẹ, sau lại nhận tin ông bà chưa thoát khỏi nhà khi lũ ập vào, Võ Thị Ngọc, du học sinh Nga, lên mạng cầu cứu sự giúp đỡ.</p>
             </section>
 
-            <section class="Posts" id="secondPost">
+            <section class="posts" id="secondPost">
                 <h2 class="postTitle">Hai tuyến đường ở Đăk Nông, Bình Phước sụt lún</h2>
                 <p class ="postContent">Mưa lớn kéo dài nhiều ngày qua, làm tuyến đường ở thành phố Gia Nghĩa (Đăk Nông) và huyện Bù Đăng (Bình Phước) bị sạt lở, sụt lún, gây ách tắc giao thông.</p>
             </section>         
         
-            <section class="Posts" id="thirdPost">
+            <section class="posts" id="thirdPost">
                 <h2 class="postTitle">Bà Nguyễn Thị Thu Hà tái đắc cử Bí thư Ninh Bình</h2>
                 <p class ="postContent">Bà Nguyễn Thị Thu Hà tiếp tục được bầu giữ chức Bí thư Tỉnh ủy Ninh Bình nhiệm kỳ 2020 - 2025, tại phiên họp thứ nhất Ban Chấp hành Đảng bộ tỉnh khóa 22.</p>
             </section> 
