--- a/buoi2/world.html
+++ b/buoi2/world.html
@@ -26,10 +26,8 @@
     </header>
 
     <main>
-        <section class="pageTitle">
-          <h1>Thế giới</h1>
-        </section>
 
+        <h1 class="pageTitle">Thế giới</h1>
         <section class="mainPost">
             <img class ="mainImage" src="nintchdbpict000615499753-16032-4235-4999-1603266005.jpg">
             <div class="postTitleAndContent">
@@ -40,17 +38,17 @@
         </section>
 
         <div class="smallPosts">
-            <section class="Posts" id="firstPost">
+            <section class="posts" id="firstPost">
                 <h2 class="postTitle">Người Mỹ 'bị mất hơn 2,5 triệu năm sống do Covid-19'</h2>
                 <p class="postContent">Bộ Ngoại giao Mỹ đưa 6 cơ quan truyền thông vào danh sách cơ quan chính phủ Trung Quốc, buộc nhân viên của họ đăng ký như phái viên nước ngoài.</p>
             </section>
 
-            <section class="Posts" id="secondPost">
+            <section class="posts" id="secondPost">
                 <h2 class="postTitle">Cố vấn an ninh quốc gia Mỹ nói Trung Quốc là 'mối đe dọa thế kỷ'</h2>
                 <p class ="postContent">Cố vấn an ninh quốc gia Robert O'Brien cho rằng Trung Quốc là mối đe dọa khi tìm cách độc chiếm mọi ngành công nghiệp quan trọng của thế kỷ 21.</p>
             </section>         
         
-            <section class="Posts" id="thirdPost">
+            <section class="posts" id="thirdPost">
                 <h2 class="postTitle">Hai mảng đối lập của bức tranh Covid-19 toàn cầu</h2>
                 <p class ="postContent">Khi Mỹ và nhiều nước châu Âu chạy đua chống đỡ làn sóng Covid-19 mới, cuộc sống ở hầu hết quốc gia châu Á đã dần trở lại bình thường.</p>
             </section> 
