--- a/buoi2/business.html
+++ b/buoi2/business.html
@@ -56,11 +56,30 @@
     </main>
 
     <footer>
-        <div>
-            <a href="index.html"><img class="logoimage" src="logo.svg" alt="logo vn express"></a>
-            <p class ="copyRight">© 1997-2020. Toàn bộ bản quyền thuộc VnExpress <br>
-                    Báo tiếng Việt nhiều người xem nhất. Thuộc Bộ Khoa học Công nghệ</p>
+        <div class="copyRight">
+            <a href="index.html"><img class="pageLogo" src="logo.svg" alt="logo vn express"></a>
+            <p>© 1997-2020. Toàn bộ bản quyền thuộc VnExpress <br>
+            Báo tiếng Việt nhiều người xem nhất. Thuộc Bộ Khoa học Công nghệ</p>
+        </div>
 
+        <div class="contacts">
+            <h3>Liên hệ</h3>
+            <a href="#">Tòa soạn</a>
+            <br>
+            <a href="#">Quảng cáo</a>
+        </div>
+
+        <div class="telephone">
+            <h3>Đường dây nóng</h3>
+            <p>083.888.0123</p>
+            <p>082.233.3555</p>
+        </div>
+
+        <div class="social">
+            <h3>Theo dõi VnExpress trên:</h3>
+            <a href="https://www.facebook.com/congdongvnexpress/">Facebook</a>
+            <br>
+            <a href="https://www.youtube.com/channel/UCVRqZH5QnrnbMWhElPBD-MQ?sub_confirmation=1">Youtube</a>
         </div>
     </footer>
 
