--- a/buoi2/business.html
+++ b/buoi2/business.html
@@ -37,22 +37,22 @@
             </div>
         </section>
 
-        <div class="smallPosts">
-            <section class="posts" id="firstPost">
+        <section class="smallPosts">
+            <div class="posts" id="firstPost">
                 <h2 class="postTitle">Quý III Vietcombank: lãi giảm hơn 20%</h2>
                 <p class="postContent">Lợi nhuận của nhà băng đứng đầu thị trường giảm mạnh so với cùng kỳ do tăng dự phòng và sự phân hóa trong hoạt động.</p>
-            </section>
+            </div>
 
-            <section class="posts" id="secondPost">
+            <div class="posts" id="secondPost">
                 <h2 class="postTitle">Hơn 820.000 bao thuốc lá lậu bị thu giữ</h2>
                 <p class ="postContent">Trong 9 tháng, cơ quan chức năng phát hiện 1.035 vụ mua bán, vận chuyển, tàng trữ thuốc lá lậu, thu giữ 820.172 gói thuốc.</p>
-            </section>         
+            </div>         
         
-            <section class="posts" id="thirdPost">
+            <div class="posts" id="thirdPost">
                 <h2 class="postTitle">Giá vàng SJC có xu hướng tăng nhẹ</h2>
                 <p class ="postContent">Các doanh nghiệp kinh doanh vàng miếng sáng nay tăng 50.000-100.000 đồng, đẩy giá giao dịch lên 56-56,45 triệu đồng mỗi lượng.</p>
-            </section> 
-        </div>   
+            </div> 
+        </section>   
     </main>
 
     <footer>
