--- a/buoi2/world.html
+++ b/buoi2/world.html
@@ -37,22 +37,22 @@
             </div>
         </section>
 
-        <div class="smallPosts">
-            <section class="posts" id="firstPost">
+        <section class="smallPosts">
+            <div class="posts" id="firstPost">
                 <h2 class="postTitle">Người Mỹ 'bị mất hơn 2,5 triệu năm sống do Covid-19'</h2>
                 <p class="postContent">Bộ Ngoại giao Mỹ đưa 6 cơ quan truyền thông vào danh sách cơ quan chính phủ Trung Quốc, buộc nhân viên của họ đăng ký như phái viên nước ngoài.</p>
-            </section>
+            </div>
 
-            <section class="posts" id="secondPost">
+            <div class="posts" id="secondPost">
                 <h2 class="postTitle">Cố vấn an ninh quốc gia Mỹ nói Trung Quốc là 'mối đe dọa thế kỷ'</h2>
                 <p class ="postContent">Cố vấn an ninh quốc gia Robert O'Brien cho rằng Trung Quốc là mối đe dọa khi tìm cách độc chiếm mọi ngành công nghiệp quan trọng của thế kỷ 21.</p>
-            </section>         
+            </div>         
         
-            <section class="posts" id="thirdPost">
+            <div class="posts" id="thirdPost">
                 <h2 class="postTitle">Hai mảng đối lập của bức tranh Covid-19 toàn cầu</h2>
                 <p class ="postContent">Khi Mỹ và nhiều nước châu Âu chạy đua chống đỡ làn sóng Covid-19 mới, cuộc sống ở hầu hết quốc gia châu Á đã dần trở lại bình thường.</p>
-            </section> 
-        </div>   
+            </div> 
+        </section>   
     </main>
 
     <footer>
