--- a/buoi2/index.html
+++ b/buoi2/index.html
@@ -39,22 +39,22 @@
         </section>
 
         <!--Các bài viết khác-->
-        <div class="smallPosts">
-            <section class="posts" id="firstPost">
+        <section class="smallPosts">
+            <div class="posts" id="firstPost">
                 <h2 class="postTitle">Biden khó lay chuyển 'di sản Trung Quốc' của Trump</h2>
                 <p class="postContent">Quan hệ Mỹ - Trung đang có nguy cơ biến thành "Chiến tranh Lạnh mới" dưới thời Trump, xu hướng Biden khó có thể đảo ngược nếu đắc cử.</p>
-            </section>
+            </div>
 
-            <section class="posts" id="secondPost">
+            <div class="posts" id="secondPost">
                 <h2 class="postTitle">Sinh con trong mưa lũ</h2>
                 <p class ="postContent">Mắc kẹt trong Bệnh viện Đa khoa Lệ Thủy 6 ngày vì lũ, những giọt sữa đầu tiên từ bầu ngực chị Võ Thị Thu Kiều đến từ mì tôm và lương khô.</p>
-            </section>         
+            </div>         
         
-            <section class="posts" id="thirdPost">
+            <div class="posts" id="thirdPost">
                 <h2 class="postTitle">Nghệ sĩ Lý Huỳnh qua đời</h2>
                 <p class ="postContent">Nghệ sĩ Nhân dân Lý Huỳnh - cha tài tử Lý Hùng - qua đời tại nhà riêng 5h sáng 22/10 vì bệnh nặng, thọ 78 tuổi.</p>
-            </section> 
-        </div>   
+            </div> 
+        </section>   
     </main>
 
     <footer>
