--- a/buoi3/index.html
+++ b/buoi3/index.html
@@ -2,50 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
-  <link rel="stylesheet" href="style3.css">
 </head>
 <body>
+  <div class="page-container">
+    <header>
+      <img src=""
+    </header>
 
-<div class="container">
-  <header>
-    <div class="logo">
-      <img src="../buoi2/logo.svg">
-    </div>
-    <nav>
-      <ul>
-        <li><a href="#">Trang chủ</a></li>
-        <li><a href="#">Trang chủ</a></li>
-        <li><a href="#">Trang chủ</a></li>
-        <li><a href="#">Trang chủ</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <div class="box">
-    <img src="../ONK8oE2Q.jpg">
-    <p>the first</p>
-  </div><!--
-  --><div class="box">
-    <img src="../ONK8oE2Q.jpg">
-    <p>the second</p>
-  </div><!--
-  --><div class="box">
-    <img src="../ONK8oE2Q.jpg">
-    <p>the third</p>
-  </div><!--
-  --><div class="box">
-    <img src="../ONK8oE2Q.jpg">
-    <p>the forth</p>
   </div>
-
-
-  <!--
-  <div class="big">
-   <div class="small">
-  -->
-  </div>
-</div>
 </body>
 </html>
