--- a/buoi3/index.html
+++ b/buoi3/index.html
@@ -8,10 +8,111 @@
 </head>
 <body>
   <div class="page-container">
+
     <header>
-      <img src=""
+      <div class="main-logo">
+        <img src="globalheader_logo.png" height=66px width=264px alt="Steam logo">
+      </div>
+
+      <div class="top-nav-container">
+        <nav class="top-nav">
+          <ul class="top-nav-list">
+            <li class="top-nav-items"><a href="#">Store</a></li>
+            <li class="top-nav-items"><a href="#">Community</a></li>
+            <li class="top-nav-items"><a href="#">About</a></li>
+            <li class="top-nav-items"><a href="#">Support</a></li>
+          </ul>
+        </nav>
+      </div>
+
     </header>
 
+    <main>
+
+      <div class="main-banner">
+        <video autoplay muted loop>
+          <source src="webm_page_bg_english.webm" type="video/webm">
+        </video>
+        <div class="main-banner-content">
+          <ul class="minor-nav">
+            <li class="minor-nav-items">Your store</li>
+            <li class="minor-nav-items">Browsw</li>
+            <li class="minor-nav-items">News</li>
+            <li class="minor-nav-items">
+              <input type="text" placeholder="search...">
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="minor-banner">
+        <img src="takeunder_desktop_english.jpg" alt="Steam digital tabletop fest">
+      </div>
+
+      <div class="page-content">
+        <section class="categories">
+          <div class="categories-name">
+            <h1>FEATURED & RECOMMENDED</h1>
+            <div class="product-images">
+              <img class="product-icon" src="cyberpunk2077_184x69.jpg" alt="cyberpunk 2077">
+              <img class="product-icon" src="amongus_184x69.jpg" alt="among us">
+              <img class="product-icon" src="hades_184x69 (1).jpg" alt="hades">
+              <img class="product-icon" src="remnant_184x69.jpg" alt="remnant">
+            </div>
+          </div>
+        </section>
+        
+        <section class="categories">
+          <div class="categories-name">
+            <h1>SPECIAL OFFERS</h1>
+            <div class="product-images">
+              <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
+              <img class="product-icon" src="tombraider_184x69.jpg" alt="tomb raider">
+              <img class="product-icon" src="fallout4goty_184x69.jpg" alt="fallout 4 GOTY">
+              <img class="product-icon" src="outer_184x69.jpg" alt="the outer world">
+            </div>
+          </div>
+        </section>
+
+        <section class="categories">
+          <div class="categories-name">
+            <h1>POPULAR</h1>
+            <div class="product-images">
+              <img class="product-icon" src="hitman_184x69.jpg" alt="hitma">
+              <img class="product-icon" src="civil_184x69.jpg" alt="Sid Meier’s Civilization® VI">
+              <img class="product-icon" src="totalwar_184x69.jpg" alt="total war: warhammer">
+              <img class="product-icon" src="gta_184x69.jpg" alt="GTA 5">
+            </div>
+          </div>
+        </section>
+
+      </div>
+    </main>
+
+    <footer>
+      <div class="copyright">
+        <div class="footer-valve-logo">
+          <img src="footerLogo_valve_new.png" alt="valve logo">
+        </div>
+        <div class="copyright-info">
+          <p>© 2020 Valve Corporation. All rights reserved. All trademarks are property of their respective owners in the US and other countries.</p>
+          <p>VAT included in all prices where applicable.</p>
+          <a href="#">Privacy Policy</a>
+          <a href="#">Legal</a>
+          <a href="#">Steam Subscriber Agreement</a>
+          <a href="#">Refunds</a>
+        </div>
+        <div class="footer-steam-logo">
+          <img src="logo_steam_footer.png">
+        </div>
+      </div>
+
+      <div class="contacts">
+        <h2>Find us on</h2>
+        <a href="https://www.facebook.com/Steam">Facebook</a>
+        <a href="https://twitter.com/steam">Twitter</a>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
