--- a/buoi3/index.html
+++ b/buoi3/index.html
@@ -11,7 +11,7 @@
 
     <header>
       <div class="main-logo">
-        <img src="globalheader_logo.png" height=66px width=264px alt="Steam logo">
+        <img src="globalheader_logo.png" alt="Steam logo">
       </div>
 
       <div class="top-nav-container">
